--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -3,8 +3,7 @@
 
 <div class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static mb-3">
     <a (click)="navigateToLanding()" class="flex align-items-center">
-        <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="50" class="mr-0 lg:mr-2">
-        <span class="text-900 font-medium text-2xl line-height-3 mr-8">SAKAI</span>
+        <img src="assets/layout/images/hackathonnetlogo.png" alt="Logo" height="50" class="mr-0 lg:mr-2">
     </a>
     
     <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden" leaveToClass="hidden" >
@@ -13,50 +12,43 @@
     <div class="align-items-center surface-0 flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2" style="top:85%">
         <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
             <li>
-                <a (click)="router.navigate(['/pages/landing'], {fragment: 'home'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                    <span>Home</span>
+                <a [routerLink]="['/mentor-applications/new']" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                  <span>Apply</span>
+                </a>
+              </li>
+
+            <li>
+                <a (click)="router.navigate(['mentor-evaluation/new'], {fragment: 'features'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                    <span>Evaluate</span>
                 </a>
             </li>
             <li>
-                <a (click)="router.navigate(['/pages/landing'], {fragment: 'features'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                    <span>Features</span>
-                </a>
+            <a [routerLink]="['/mentor-form']" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                <span>Participate</span>
+            </a>
             </li>
-
-<li>
-  <a [routerLink]="['/mentor-form']" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-    <span>participate</span>
-  </a>
-</li>
-            <!-- This is a comment=
-
+          
             <li>
-                <a (click)="router.navigate(['/sponsor-prizes'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                    <span>My prizes</span>
+                <a [routerLink]="['/mentor-evaluations-user']" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                    <span>my evaluations</span>
                 </a>
-            </li>
-            <li>
-                <a (click)="router.navigate(['/sponsor-application-form'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                    <span>Apply as a sponsor</span>
-                </a>
-            </li>
-            <li>
-                <a (click)="router.navigate(['/sponsors-leaderboard'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                    <span>Sponsor Leaderboard</span>
-                </a>
-            </li>
+                </li>
+              
 
-        -->
 
+
+
+            
 
         </ul>
-        <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
-            <div class="badge-container" *ngIf="user">
-                <img [src]="getBadgeIcon()" [alt]="user.badge" class="badge-icon" />
-              </div>
+        <div class="flex justify-content-between lg:flex-row lg:align-items-center border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
+            <div class="badge-icon ml-auto mr-1" *ngIf="user">
+              <img [src]="getBadgeIcon()" [alt]="user.badge" />
+            </div>
             <button pButton pRipple label="Login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
             <button pButton pRipple label="Register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
         </div>
+        
     </div>
 </div>
 
