--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.scss
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.scss
@@ -10,7 +10,16 @@
 }
 
   
-  
+
+.badge-icon {
+    
+  img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+}
 
 .header-button {
   background: #007bff;
