--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.scss
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.scss
@@ -287,3 +287,13 @@
   .p-sidebar.sidebar {
     width: 400px !important; /* Customize this value to your desired width */
   }
+
+  .badge-icon {
+    
+    img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
